@@ -1,9 +1,17 @@
 package com.homestat.user;
 
+import com.homestat.exception.UserAlreadyExistsException;
+import com.homestat.registration.RegistrationRequest;
+import com.homestat.registration.token.VerificationToken;
+import com.homestat.registration.token.VerificationTokenRespository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -12,92 +20,125 @@ import static org.mockito.Mockito.*;
 
 class UserServiceTest {
 
+    @Mock
     private UserRepository userRepository;
+
+    @Mock
+    private VerificationTokenRespository tokenRespository;
+
+    @Mock
+    private PasswordEncoder passwordEncoder;
+
+    @InjectMocks
     private UserService userService;
 
     @BeforeEach
     void setUp() {
-        // Create a mock UserRepository
-        userRepository = mock(UserRepository.class);
-
-        // Inject the mock repository into the UserService
-        userService = new UserService(userRepository);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    void testGetUsers_ReturnsListOfUsers() {
+    void testGetUsers() {
         // Arrange
-        User user1 = new User(1L, "Adam", "Brown", "adambrown@test.com", "password", "USER", false);
-        User user2 = new User(2L, "eve", "Smith", "evesmith@test.com", "password", "ADMIN", true);
-        List<User> mockUsers = Arrays.asList(user1, user2);
-
-        when(userRepository.findAll()).thenReturn(mockUsers);
+        User user1 = new User();
+        User user2 = new User();
+        when(userRepository.findAll()).thenReturn(List.of(user1, user2));
 
         // Act
         List<User> users = userService.getUsers();
 
         // Assert
-        assertNotNull(users, "The result should not be null");
-        assertEquals(2, users.size(), "The size of the result should be 2");
-        assertEquals("Adam", users.get(0).getFirstName(), "First user's name should match");
-        assertEquals("ADMIN", users.get(1).getRole(), "Second user's role should match");
+        assertNotNull(users);
+        assertEquals(2, users.size());
         verify(userRepository, times(1)).findAll();
     }
 
     @Test
-    void testGetUsers_ReturnsEmptyList() {
+    void testRegisterUser_Success() {
         // Arrange
-        when(userRepository.findAll()).thenReturn(List.of());
+        RegistrationRequest request = new RegistrationRequest("John", "Doe", "john@example.com", "password", "USER");
+        when(userRepository.findByEmail(request.email())).thenReturn(Optional.empty());
+        when(passwordEncoder.encode(request.password())).thenReturn("encodedPassword");
+
+        ArgumentCaptor<User> userCaptor = ArgumentCaptor.forClass(User.class);
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         // Act
-        List<User> users = userService.getUsers();
+        User registeredUser = userService.registerUser(request);
 
         // Assert
-        assertNotNull(users, "The result should not be null");
-        assertTrue(users.isEmpty(), "The result should be an empty list");
-        verify(userRepository, times(1)).findAll();
+        assertNotNull(registeredUser);
+        verify(userRepository, times(1)).findByEmail(request.email());
+        verify(passwordEncoder, times(1)).encode(request.password());
+        verify(userRepository, times(1)).save(userCaptor.capture());
+
+        User capturedUser = userCaptor.getValue();
+        assertEquals("John", capturedUser.getFirstName());
+        assertEquals("Doe", capturedUser.getLastName());
+        assertEquals("john@example.com", capturedUser.getEmail());
+        assertEquals("encodedPassword", capturedUser.getPassword());
+        assertEquals("USER", capturedUser.getRole());
     }
 
     @Test
-    void testFindByEmail_UserExists() {
+    void testRegisterUser_UserAlreadyExists() {
         // Arrange
-        String email = "adambrown@test.com";
-        User mockUser = new User(1L, "Adam", "Brown", email, "password", "USER", false);
+        RegistrationRequest request = new RegistrationRequest("John", "Doe", "john@example.com", "password", "USER");
+        User existingUser = new User();
+        when(userRepository.findByEmail(request.email())).thenReturn(Optional.of(existingUser));
 
-        when(userRepository.findByEmail(email)).thenReturn(Optional.of(mockUser));
+        // Act & Assert
+        UserAlreadyExistsException exception = assertThrows(UserAlreadyExistsException.class, () -> userService.registerUser(request));
+        assertEquals("User with emailjohn@example.com already exists", exception.getMessage());
+        verify(userRepository, times(1)).findByEmail(request.email());
+        verify(userRepository, never()).save(any(User.class));
+    }
+
+    @Test
+    void testFindByEmail_UserFound() {
+        // Arrange
+        String email = "john@example.com";
+        User user = new User();
+        when(userRepository.findByEmail(email)).thenReturn(Optional.of(user));
 
         // Act
-        Optional<User> user = userService.findByEmail(email);
+        Optional<User> foundUser = userService.findByEmail(email);
 
         // Assert
-        assertTrue(user.isPresent(), "User should be present");
-        assertEquals(email, user.get().getEmail(), "Email should match the searched email");
-        assertEquals("Adam", user.get().getFirstName(), "First name should match");
+        assertTrue(foundUser.isPresent());
+        assertEquals(user, foundUser.get());
         verify(userRepository, times(1)).findByEmail(email);
     }
 
     @Test
-    void testFindByEmail_UserDoesNotExist() {
+    void testFindByEmail_UserNotFound() {
         // Arrange
-        String email = "nonexistent@test.com";
-
+        String email = "john@example.com";
         when(userRepository.findByEmail(email)).thenReturn(Optional.empty());
 
         // Act
-        Optional<User> user = userService.findByEmail(email);
+        Optional<User> foundUser = userService.findByEmail(email);
 
         // Assert
-        assertFalse(user.isPresent(), "User should not be present");
+        assertFalse(foundUser.isPresent());
         verify(userRepository, times(1)).findByEmail(email);
     }
 
     @Test
-    void testFindByEmail_NullEmail() {
+    void testSaveUserVerificationToken() {
         // Arrange
-        when(userRepository.findByEmail(null)).thenThrow(IllegalArgumentException.class);
+        User user = new User();
+        String token = "verification-token";
+        VerificationToken verificationToken = new VerificationToken(token, user);
 
-        // Act & Assert
-        assertThrows(IllegalArgumentException.class, () -> userService.findByEmail(null), "Searching with null email should throw exception");
-        verify(userRepository, times(1)).findByEmail(null);
+        // Act
+        userService.saveUserVerificationToken(user, token);
+
+        // Assert
+        ArgumentCaptor<VerificationToken> tokenCaptor = ArgumentCaptor.forClass(VerificationToken.class);
+        verify(tokenRespository, times(1)).save(tokenCaptor.capture());
+        VerificationToken capturedToken = tokenCaptor.getValue();
+        assertEquals("verification-token", capturedToken.getToken());
+        assertEquals(user, capturedToken.getUser());
     }
 }
